--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.7.3",
 		"@tsconfig/strictest": "^2.0.5",
+		"type-fest": "^4.18.3",
 		"typescript": "^5.4.5",
 		"vitest": "^1.6.0",
 		"zod": "^3.23.8"
