--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
-	"extends": "@tsconfig/strictest/tsconfig.json",
-	"compilerOptions": {
-		"target": "ES2022",
-		"moduleResolution": "Bundler"
-	}
+  "extends": "@tsconfig/strictest/tsconfig.json",
+  "compilerOptions": {
+    "target": "ES6",
+    "moduleResolution": "Bundler",
+    "lib": ["ES2022"],
+    "noEmit": true
+  },
+  "include": ["src"]
 }
