feature: Import with ts extension
For compatibility with Deno.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "target": "ES6",
     "moduleResolution": "Bundler",
     "lib": ["ES2022"],
-    "noEmit": true
+    "noEmit": true,
+    "allowImportingTsExtensions": true
   },
   "include": ["src"]
 }
