--- a/deno.json
+++ b/deno.json
@@ -4,14 +4,14 @@
     "@badrap/valita": "jsr:@badrap/valita@^0.3.8",
     "@biomejs/biome": "npm:@biomejs/biome@^1.8.0",
     "@std/expect": "jsr:@std/expect@^0.224.4",
-    "@tsconfig/strictest": "npm:@tsconfig/strictest@^2.0.5",
     "esbuild": "npm:esbuild@^0.21.4",
     "type-fest": "npm:type-fest@^4.20.0",
+    "typescript": "npm:typescript@^5.4.5",
     "zod": "npm:zod@^3.23.8"
   },
   "tasks": {
     "lint": "deno run --allow-env --allow-read --allow-run npm:@biomejs/biome lint src",
     "format": "deno run --allow-env --allow-read --allow-run npm:@biomejs/biome format src",
-    "build": "deno run --allow-env --allow-read --allow-run npm:esbuild --format=esm --bundle src/index.ts --outfile=dist/schema-validator.js --minify"
+    "build": "deno run --allow-env --allow-read --allow-run --allow-write build.ts"
   }
 }
