feature: Never validator

--- a/deno.json
+++ b/deno.json
@@ -17,7 +17,7 @@
   },
   "lint": {
     "rules": {
-      "exclude": ["no-explicit-any"]
+      "exclude": ["no-explicit-any", "no-unused-vars"]
     }
   }
 }
