--- a/paseri-lib/deno.json
+++ b/paseri-lib/deno.json
@@ -6,6 +6,7 @@
     "@std/expect": "jsr:@std/expect@^0.224.4",
     "esbuild": "npm:esbuild@^0.21.4",
     "expect-type": "npm:expect-type@^0.19.0",
+    "fast-check": "npm:fast-check@^3.20.0",
     "type-fest": "npm:type-fest@^4.20.0",
     "typescript": "npm:typescript@^5.4.5",
     "zod": "npm:zod@^3.23.8"
