--- a/paseri-lib/deno.json
+++ b/paseri-lib/deno.json
@@ -1,5 +1,7 @@
 {
   "name": "@vbudovski/paseri",
+  "version": "0.1.0",
+  "exports": "./src/index.ts",
   "imports": {
     "@badrap/valita": "jsr:@badrap/valita@^0.3.8",
     "@biomejs/biome": "npm:@biomejs/biome@^1.8.0",
