feature: JSR publish job

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,3 +12,12 @@ jobs:
     uses: ./.github/workflows/test.yml
     secrets:
       GIST_SECRET: ${{ secrets.GIST_SECRET }}
+
+  publish:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write # The OIDC ID token is used for authentication with JSR.
+    steps:
+      - uses: actions/checkout@v4
+      - run: npx jsr publish
