doc: Include README and module documentation in package

--- a/paseri-lib/deno.json
+++ b/paseri-lib/deno.json
@@ -1,7 +1,7 @@
 {
   "name": "@vbudovski/paseri",
   "license": "MIT",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "exports": {
     ".": "./src/index.ts",
     "./locales": "./src/locales/index.ts"
@@ -28,7 +28,7 @@
     }
   },
   "publish": {
-    "include": ["src"]
+    "include": ["src", "README.md"]
   },
   "nodeModulesDir": "auto"
 }
