--- a/paseri-lib/deno.json
+++ b/paseri-lib/deno.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://raw.githubusercontent.com/denoland/deno/main/cli/schemas/config-file.v1.json",
   "name": "@vbudovski/paseri",
   "license": "MIT",
   "version": "0.1.3",
