--- a/paseri-docs/package.json
+++ b/paseri-docs/package.json
@@ -12,11 +12,29 @@
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/starlight": "^0.30.1",
-    "astro": "^5.0.5",
+    "@astrojs/starlight": "^0.30.3",
+    "@lexical/code": "^0.21.0",
+    "@lexical/markdown": "^0.21.0",
+    "@lexical/plain-text": "^0.21.0",
+    "@lexical/react": "^0.21.0",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "astro": "^5.1.1",
+    "lexical": "^0.21.0",
     "rehype-external-links": "^3.0.0",
     "sharp": "^0.33.5",
     "typescript": "^5.7.2"
   },
-  "packageManager": "pnpm@9.6.0+sha256.dae0f7e822c56b20979bb5965e3b73b8bdabb6b8b8ef121da6d857508599ca35"
+  "dependencies": {
+    "@astrojs/react": "^4.1.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
+  "overrides": {
+    "@astrojs/react": {
+      "react": "^19.0.0",
+      "react-dom": "^19.0.0"
+    }
+  },
+  "packageManager": "pnpm@9.15.1+sha512.1acb565e6193efbebda772702950469150cf12bcc764262e7587e71d19dc98a423dff9536e57ea44c49bdf790ff694e83c27be5faa23d67e0c033b583be4bfcf"
 }
