--- a/paseri-lib/deno.json
+++ b/paseri-lib/deno.json
@@ -18,7 +18,8 @@
   },
   "tasks": {
     "lint": "deno run --allow-env --allow-read --allow-run npm:@biomejs/biome lint src",
-    "format": "deno run --allow-env --allow-read --allow-run npm:@biomejs/biome format src"
+    "format": "deno run --allow-env --allow-read --allow-run npm:@biomejs/biome format src",
+    "generate_emoji": "deno run --allow-net --allow-write bin/generate_emoji.ts"
   },
   "lint": {
     "rules": {
