--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.7.3/schema.json",
   "files": {
-    "ignore": [".astro"]
+    "ignore": ["dist", ".astro"]
   },
   "organizeImports": {
     "enabled": true
