--- a/paseri-lib/deno.json
+++ b/paseri-lib/deno.json
@@ -13,6 +13,7 @@
     "expect-type": "npm:expect-type",
     "fast-check": "npm:fast-check",
     "recheck": "npm:recheck",
+    "regex": "npm:regex@^5.1.1",
     "type-fest": "npm:type-fest@4.30.0",
     "zod": "npm:zod"
   },
