feature: Add commitlint

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -10,8 +10,11 @@ jobs:
   lint:
     uses: ./.github/workflows/lint.yml
 
+  commitlint:
+    uses: ./.github/workflows/commitlint.yml
+
   test:
-    needs: lint
+    needs: [lint, commitlint]
     uses: ./.github/workflows/test.yml
     secrets:
       GIST_SECRET: ${{ secrets.GIST_SECRET }}
