--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,14 @@
 {
+  "imports": {
+    "@commitlint/config-conventional": "npm:@commitlint/config-conventional@^19.6.0",
+    "@commitlint/types": "npm:@commitlint/types@^19.5.0"
+  },
   "tasks": {
     "init": "deno run --allow-env --allow-read --allow-write --allow-run npm:husky",
     "lint-staged": "deno run --allow-env --allow-read --allow-write --allow-sys --allow-run npm:lint-staged",
     "ci": "deno run --allow-env --allow-read --allow-run npm:@biomejs/biome ci",
-    "check": "deno run --allow-env --allow-read --allow-run npm:@biomejs/biome check"
+    "check": "deno run --allow-env --allow-read --allow-run npm:@biomejs/biome check",
+    "commitlint": "deno run --allow-env --allow-sys --allow-read --allow-write --allow-run npm:@commitlint/cli"
   },
   "workspace": ["paseri-lib"],
   "nodeModulesDir": "auto"
