fix: Remove old TypeScript config

--- a/paseri-docs/deno.json
+++ b/paseri-docs/deno.json
@@ -32,5 +32,9 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
+  },
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
   }
 }
