--- a/paseri-docs/package.json
+++ b/paseri-docs/package.json
@@ -23,8 +23,7 @@
     "charts.css": "^1.1.0",
     "lexical": "^0.23.1",
     "rehype-external-links": "^3.0.0",
-    "sharp": "^0.33.5",
-    "typescript": "^5.7.3"
+    "sharp": "^0.33.5"
   },
   "dependencies": {
     "@astrojs/react": "^4.2.0",
