--- a/paseri-lib/deno.json
+++ b/paseri-lib/deno.json
@@ -8,14 +8,14 @@
     "./locales": "./src/locales/index.ts"
   },
   "imports": {
-    "@badrap/valita": "jsr:@badrap/valita",
-    "@std/expect": "jsr:@std/expect@1.0.13",
-    "expect-type": "npm:expect-type",
-    "fast-check": "npm:fast-check",
-    "recheck": "npm:recheck",
+    "@badrap/valita": "jsr:@badrap/valita@0.4.6",
+    "@std/expect": "jsr:@std/expect@1.0.16",
+    "expect-type": "npm:expect-type@1.2.2",
+    "fast-check": "npm:fast-check@4.2.0",
+    "recheck": "npm:recheck@4.4.5",
     "regex": "npm:regex@^6.0.1",
-    "type-fest": "npm:type-fest@4.34.1",
-    "zod": "npm:zod@3.24.2"
+    "type-fest": "npm:type-fest@4.41.0",
+    "zod": "npm:zod@4.0.15"
   },
   "tasks": {
     "generate_emoji": "deno run --allow-net --allow-write bin/generate_emoji.ts"
