feature: Enable isolated declarations
Closes #21.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,5 +26,7 @@ jobs:
 
       - name: Set up Deno
         uses: denoland/setup-deno@v2
+        with:
+          deno-version: "^2.5.5"
 
       - run: deno publish
